--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
 APP_URL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-BROWSER=chromelocal
+BROWSER=chromedocker
 UserName=Admin
 Password=admin123
